--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -211,6 +211,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TestScreen.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Tiles.h">
       <SubType>
       </SubType>
@@ -274,6 +278,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestObject.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TestScreen.cpp">
       <SubType>
       </SubType>
     </ClCompile>
