--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -329,6 +329,9 @@
       </SubType>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\dfi.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
