--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -230,6 +230,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TitleBackGround.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TitleLevel.h">
       <SubType>
       </SubType>
@@ -313,6 +317,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Tiles.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TitleBackGround.cpp">
       <SubType>
       </SubType>
     </ClCompile>
