--- a/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="WrongMark.h">
       <Filter>PublicObject</Filter>
     </ClInclude>
+    <ClInclude Include="TitleBackGround.h">
+      <Filter>Levels\TitleLevel\Obj</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DFICore.cpp" />
@@ -118,6 +121,9 @@
     <ClCompile Include="BackGroundRenderer.cpp" />
     <ClCompile Include="WrongMark.cpp">
       <Filter>PublicObject</Filter>
+    </ClCompile>
+    <ClCompile Include="TitleBackGround.cpp">
+      <Filter>Levels\TitleLevel\Obj</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
