--- a/EngineResources/Shader/Shader.vcxproj.filters
+++ b/EngineResources/Shader/Shader.vcxproj.filters
@@ -4,5 +4,7 @@
     <FxCompile Include="TextureShader.hlsl" />
     <FxCompile Include="MergeShader.hlsl" />
     <FxCompile Include="DebugMeshRender.hlsl" />
+    <FxCompile Include="TileMapShader.hlsl" />
+    <FxCompile Include="BlurShader.hlsl" />
   </ItemGroup>
 </Project>
