--- a/EngineResources/Shader/Shader.vcxproj
+++ b/EngineResources/Shader/Shader.vcxproj
@@ -143,9 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <FxCompile Include="BlurShader.hlsl" />
     <FxCompile Include="DebugMeshRender.hlsl" />
     <FxCompile Include="MergeShader.hlsl" />
     <FxCompile Include="TextureShader.hlsl" />
+    <FxCompile Include="TileMapShader.hlsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
