--- a/ContentResources/ContentsShader/ContentsShader.vcxproj
+++ b/ContentResources/ContentsShader/ContentsShader.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <FxCompile Include="FadeShader.hlsl" />
+    <FxCompile Include="FireWorkShader.hlsl" />
     <FxCompile Include="MyShader.fx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
