--- a/ContentResources/ContentsShader/ContentsShader.vcxproj.filters
+++ b/ContentResources/ContentsShader/ContentsShader.vcxproj.filters
@@ -3,5 +3,6 @@
   <ItemGroup>
     <FxCompile Include="MyShader.fx" />
     <FxCompile Include="FadeShader.hlsl" />
+    <FxCompile Include="FireWorkShader.hlsl" />
   </ItemGroup>
 </Project>
