--- a/GameEngineContents/GameEngineContents.vcxproj
+++ b/GameEngineContents/GameEngineContents.vcxproj
@@ -193,6 +193,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="SmokeEffect.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TextObj.h">
       <SubType>
       </SubType>
@@ -283,6 +287,10 @@
     </ClCompile>
     <ClCompile Include="FadeEffect.cpp" />
     <ClCompile Include="FireWorkEffect.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="SmokeEffect.cpp">
       <SubType>
       </SubType>
     </ClCompile>
