테스트 쉐이더 업로드 이름 수정 필요

--- a/ContentResources/ContentsShader/ContentsShader.vcxproj.filters
+++ b/ContentResources/ContentsShader/ContentsShader.vcxproj.filters
@@ -5,5 +5,6 @@
     <FxCompile Include="FadeShader.hlsl" />
     <FxCompile Include="FireWorkShader.hlsl" />
     <FxCompile Include="FireWork2.hlsl" />
+    <FxCompile Include="test.hlsl" />
   </ItemGroup>
 </Project>
